Need to test if this fixes the overflow bug

--- a/app/global.scss
+++ b/app/global.scss
@@ -13,6 +13,7 @@ body {
     // -webkit-font-smoothing: antialiased;
 	// text-rendering: optimizeLegibility;
     background: none;
+    overflow: hidden;
 }
 
 body {
